# imessage-travel-bot

./: .gitignore  README.md  pyproject.toml
src/: config.py  google_doc_sync.py  main.py  models.py  openai_helpers.py  stagehand_scraper.py
src/stagehand_scripts/: __init__.py  scrape_airbnb.py  scrape_document.py  scrape_google_flights.py  scrape_vrbo.py  sync_google_doc.py
tests/: test_bot.py
